[add] view dashboard admin, [refactor] partials views navbar, sidebar

--- a/src/views/admin/dashboard/view_dashboard.ejs
+++ b/src/views/admin/dashboard/view_dashboard.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs')%>
+<%- include('../../partials/header.ejs')%>
 
     <body id="page-top">
 
@@ -6,7 +6,7 @@
         <div id="wrapper">
 
             <!-- Sidebar -->
-            <%- include('partials/sidebar.ejs')%>
+            <%- include('../../partials/sidebar.ejs')%>
                 <!-- End of Sidebar -->
 
                 <!-- Content Wrapper -->
@@ -14,18 +14,19 @@
 
                     <!-- Main Content -->
                     <div id="content">
-                        <!-- Topbar Navbar -->
-                        <%- include('partials/navbar.ejs')%>
 
+                        <!-- Topbar -->
+                        <%- include('../../partials/navbar.ejs')%>
 
-                            </nav>
+                            <!-- Topbar Navbar -->
+
                             <!-- End of Topbar -->
 
                             <!-- Begin Page Content -->
                             <div class="container-fluid">
 
                                 <!-- Page Heading -->
-                                <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
+                                <h1 class="h3 mb-4 text-gray-800">Welcome to Dashboard</h1>
 
                             </div>
                             <!-- /.container-fluid -->
@@ -34,7 +35,7 @@
                     <!-- End of Main Content -->
 
                     <!-- Footer -->
-                    <%- include('partials/footer.ejs')%>
+                    <%- include('../../partials/footer.ejs')%>
 
                         <!-- End of Footer -->
 
@@ -68,8 +69,8 @@
                 </div>
             </div>
         </div>
+        <%- include('../../partials/js.ejs')%>
 
     </body>
-    <%- include('partials/js.ejs')%>
 
-        </html>
+    </html>
