--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -1,7 +1,7 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
         </div>
@@ -28,19 +28,19 @@
 
     <!-- Nav Item - Charts -->
     <li class="nav-item">
-        <a class="nav-link" href="admin/category">
+        <a class="nav-link" href="/admin/category">
             <i class="fas fa-fw fa-list-alt"></i>
             <span>Category</span></a>
     </li>
 
     <!-- Nav Item - Tables -->
     <li class="nav-item">
-        <a class="nav-link" href="admin/bank">
+        <a class="nav-link" href="/admin/bank">
             <i class="fas fa-fw fa-money-check"></i>
             <span>Bank</span></a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="admin/item">
+        <a class="nav-link" href="/admin/item">
             <i class="fas fa-fw fa-hotel"></i>
             <span>Item</span></a>
     </li>
@@ -51,7 +51,7 @@
         Order
     </div>
     <li class="nav-item">
-        <a class="nav-link" href="admin/booking">
+        <a class="nav-link" href="/admin/booking">
             <i class="fas fa-fw fa-shopping-cart"></i>
             <span>Booking</span></a>
     </li>
