[add] view page item

--- a/src/views/admin/bank/view_bank.ejs
+++ b/src/views/admin/bank/view_bank.ejs
@@ -27,7 +27,7 @@
 
                                 <!-- Page Heading -->
                                 <h1 class="h3 mb-4 text-gray-800">Welcome to Bank</h1>
-                                <%- include('./table.ejs')%>
+                                <%- include('./table_bank.ejs')%>
                             </div>
                             <!-- /.container-fluid -->
 
