--- a/src/views/admin/item/view_item.ejs
+++ b/src/views/admin/item/view_item.ejs
@@ -27,7 +27,7 @@
 
                                 <!-- Page Heading -->
                                 <h1 class="h3 mb-4 text-gray-800">Welcome to Item</h1>
-
+                                <%- include('./table_item.ejs')%>
                             </div>
                             <!-- /.container-fluid -->
 
