[add] create category

--- a/src/views/admin/category/view_category.ejs
+++ b/src/views/admin/category/view_category.ejs
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <%- include('../../partials/header.ejs')%>
 
     <body id="page-top">
@@ -71,8 +73,10 @@
                 </div>
             </div>
         </div>
-        <%- include('../../partials/js.ejs')%>
+
+        <%- include('./add_modal.ejs')%>
+            <%- include('../../partials/js.ejs')%>
 
     </body>
 
-    </html>
+</html>
