--- a/src/views/admin/bank/view_bank.ejs
+++ b/src/views/admin/bank/view_bank.ejs
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <%- include('../../partials/header.ejs')%>
 
     <body id="page-top">
@@ -73,4 +75,4 @@
 
     </body>
 
-    </html>
+</html>
