--- a/src/views/admin/booking/view_booking.ejs
+++ b/src/views/admin/booking/view_booking.ejs
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <%- include('../../partials/header.ejs')%>
 
     <body id="page-top">
@@ -75,4 +77,4 @@
 
     </body>
 
-    </html>
+</html>
