--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <%- include('partials/header.ejs')%>
 
     <body id="page-top">
@@ -72,4 +75,4 @@
     </body>
     <%- include('partials/js.ejs')%>
 
-        </html>
+</html>
