[add] library session-express & connect-flash, [add] alert notification for http request

--- a/src/views/admin/category/view_category.ejs
+++ b/src/views/admin/category/view_category.ejs
@@ -23,12 +23,14 @@
                             <!-- End of Topbar -->
 
                             <!-- Begin Page Content -->
-                            <div class="container-fluid">
 
-                                <!-- Page Heading -->
-                                <h1 class="h3 mb-4 text-gray-800">Welcome to Category</h1>
-                                <!-- DataTales Example -->
-                                <%- include('./table_category.ejs')%>
+                            <div class="container-fluid">
+                                <%- include('../../partials/message.ejs')%>
+
+                                    <!-- Page Heading -->
+                                    <h1 class="h3 mb-4 text-gray-800">Welcome to Category</h1>
+                                    <!-- DataTales Example -->
+                                    <%- include('./table_category.ejs')%>
 
                             </div>
                             <!-- /.container-fluid -->
