--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -8,7 +8,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Staycation.</title>
+    <title>
+        <%=title%>
+    </title>
 
     <!-- Custom fonts for this template-->
     <link href="/sb-admin-2/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
