--- a/src/views/admin/bank/edit_modal.ejs
+++ b/src/views/admin/bank/edit_modal.ejs
@@ -8,22 +8,22 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form action="/admin/bank?_method=PUT" method="POST">
+            <form action="/admin/bank?_method=PUT" method="POST" enctype="multipart/form-data">
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="bankName">Name Bank</label>
-                        <input autocomplete="off" type="text" class="form-control" id="bankName"
+                        <input autocomplete="off" type="text" class="form-control bankName" id="bankName"
                             placeholder="Enter name bank" name="bankName">
                     </div>
                     <div class="form-group">
                         <label for="nomorRekening">Nomor Rekening</label>
-                        <input autocomplete="off" type="number" class="form-control" id="nomorRekening"
+                        <input autocomplete="off" type="number" class="form-control nomorRekening" id="nomorRekening"
                             placeholder="Enter nomor rekening" name="nomorRekening">
                     </div>
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input autocomplete="off" type="text" class="form-control" id="name" placeholder="Enter name"
-                            name="name">
+                        <input autocomplete="off" type="text" class="form-control name" id="name"
+                            placeholder="Enter name" name="name">
                     </div>
                     <div class="form-group">
                         <label for="image">Image</label>
