--- a/src/views/admin/bank/table_bank.ejs
+++ b/src/views/admin/bank/table_bank.ejs
@@ -40,7 +40,9 @@
                                 <form action="/admin/bank/<%= bank[i].id %>?_method=DELETE" method="POST">
                                     <a href="javascript:void();" type="button"
                                         class="btn btn-warning btn-circle btn-sm button-update"
-                                        data-id="<%= bank[i].id %>" data-name="<%= bank[i].name %>"><i
+                                        data-id="<%= bank[i].id %>" data-name="<%= bank[i].name %>"
+                                        data-bankname="<%= bank[i].bankName %>" data-imageurl="<%= bank[i].imageUrl %>"
+                                        data-nomorrekening="<%= bank[i].nomorRekening %>"><i
                                             class="fas fa-edit"></i></a>
                                     <button type="submit" class="btn btn-danger btn-circle btn-sm"><i
                                             class="fas fa-trash"></i></button>
