--- a/src/views/admin/bank/view_bank.ejs
+++ b/src/views/admin/bank/view_bank.ejs
@@ -82,12 +82,18 @@
             <%- include('./edit_modal.ejs')%>
                 <%- include('../../partials/js.ejs')%>
                     <script>
-                        $('#dataTableCategory').on('click', '.button-update', function () {
+                        $('#dataTable').on('click', '.button-update', function () {
                             let id = $(this).data('id');
                             let name = $(this).data('name');
-                            console.log(id + name)
+                            let bankName = $(this).data('bankname');
+                            let nomorRekening = $(this).data('nomorrekening');
+                            let imageUrl = $(this).data('imageurl');
+                            console.log(name + id)
+                            console.log(imageUrl)
                             $('#edit-modal').modal('show');
                             $('.name').val(name)
+                            $('.bankName').val(bankName)
+                            $('.nomorRekening').val(nomorRekening)
                             $('.id').val(id)
                         })
                     </script>
