--- a/src/views/admin/item/view_item.ejs
+++ b/src/views/admin/item/view_item.ejs
@@ -24,10 +24,28 @@
 
                             <!-- Begin Page Content -->
                             <div class="container-fluid">
+                                <%- include('../../partials/message.ejs')%>
 
-                                <!-- Page Heading -->
-                                <h1 class="h3 mb-4 text-gray-800">Welcome to Item</h1>
-                                <%- include('./table_item.ejs')%>
+                                    <!-- Page Heading -->
+                                    <h1 class="h3 mb-4 text-gray-800">Welcome to Item</h1>
+
+                                    <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                        <li class="nav-item" role="presentation">
+                                            <button class="nav-link active" id="show-item-tab" data-toggle="tab"
+                                                data-target="#show-item" type="button" role="tab"
+                                                aria-controls="show-item" aria-selected="true">Show Item</button>
+                                        </li>
+                                        <li class="nav-item" role="presentation">
+                                            <button class="nav-link" id="add-item-tab" data-toggle="tab"
+                                                data-target="#add-item" type="button" role="tab"
+                                                aria-controls="add-item" aria-selected="false">Add Item</button>
+                                        </li>
+                                    </ul>
+                                    <div class="tab-content" id="myTabContent">
+                                        <%-include ('./show_table_item.ejs')%>
+                                            <%-include ('./add_item.ejs')%>
+
+                                    </div>
                             </div>
                             <!-- /.container-fluid -->
 
@@ -70,3 +88,7 @@
             </div>
         </div>
         <%- include('../../partials/js.ejs')%>
+
+            <script>
+                CKEDITOR.replace('about');
+            </script>
