--- a/src/views/admin/item/view_item.ejs
+++ b/src/views/admin/item/view_item.ejs
@@ -27,25 +27,49 @@
                                 <%- include('../../partials/message.ejs')%>
 
                                     <!-- Page Heading -->
-                                    <h1 class="h3 mb-4 text-gray-800">Welcome to Item</h1>
+                                    <% if(action=='view' ) { %>
+                                        <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                            <li class="nav-item">
+                                                <a class="nav-link active" id="home-tab" data-toggle="tab"
+                                                    href="#show-item" role="tab" aria-controls="home"
+                                                    aria-selected="true">Show Item</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#add-item"
+                                                    role="tab" aria-controls="profile" aria-selected="false">Add
+                                                    Item</a>
+                                            </li>
 
-                                    <ul class="nav nav-tabs" id="myTab" role="tablist">
-                                        <li class="nav-item" role="presentation">
-                                            <button class="nav-link active" id="show-item-tab" data-toggle="tab"
-                                                data-target="#show-item" type="button" role="tab"
-                                                aria-controls="show-item" aria-selected="true">Show Item</button>
-                                        </li>
-                                        <li class="nav-item" role="presentation">
-                                            <button class="nav-link" id="add-item-tab" data-toggle="tab"
-                                                data-target="#add-item" type="button" role="tab"
-                                                aria-controls="add-item" aria-selected="false">Add Item</button>
-                                        </li>
-                                    </ul>
-                                    <div class="tab-content" id="myTabContent">
-                                        <%-include ('./show_table_item.ejs')%>
-                                            <%-include ('./add_item.ejs')%>
+                                        </ul>
+                                        <div class="tab-content" id="myTabContent">
+                                            <%- include('show_table_item.ejs') %>
+                                                <%- include('add_item.ejs') %>
+                                        </div>
 
-                                    </div>
+                                        <% } else if(action=='show image' ) { %>
+                                            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                                <li class="nav-item">
+                                                    <a class="nav-link active" id="home-tab" data-toggle="tab"
+                                                        href="#show-image" role="tab" aria-controls="home"
+                                                        aria-selected="true">Show Image</a>
+                                                </li>
+                                            </ul>
+                                            <div class="tab-content" id="myTabContent">
+                                                <%- include('show_image_item.ejs') %>
+                                            </div>
+                                            <% }else{%>
+                                                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                                    <li class="nav-item">
+                                                        <a class="nav-link active" id="home-tab" data-toggle="tab"
+                                                            href="#edit-item" role="tab" aria-controls="home"
+                                                            aria-selected="true">Edit Item</a>
+                                                    </li>
+
+                                                </ul>
+                                                <div class="tab-content" id="myTabContent">
+                                                    <%- include('edit_item.ejs') %>
+                                                </div>
+                                                <% } %>
                             </div>
                             <!-- /.container-fluid -->
 
@@ -91,4 +115,5 @@
 
             <script>
                 CKEDITOR.replace('about');
+                console.log(item)
             </script>
