[add] CRUD cms Feature

--- a/src/views/admin/item/detail_item/view_detail_item.ejs
+++ b/src/views/admin/item/detail_item/view_detail_item.ejs
@@ -43,7 +43,6 @@
                                     <div class="tab-content" id="myTabContent">
                                         <%- include('./show_feature.ejs')%>
                                             <%- include('./show_activity.ejs')%>
-
                                     </div>
 
 
@@ -89,10 +88,21 @@
             </div>
         </div>
         <%- include('../../../partials/js.ejs')%>
+            <%- include('./show_modal_feature.ejs')%>
 
-            <script>
-                $(document).ready(function () {
-                    $('#dataTableActivity').dataTable();
-                })
-                CKEDITOR.replace('about');
-            </script>
+                <script>
+                    $(document).ready(function () {
+                        $('#dataTableActivity').dataTable();
+                    })
+                    CKEDITOR.replace('about');
+
+                    $('#dataTable').on('click', '.button-update', function () {
+                        let id = $(this).data('id');
+                        let name = $(this).data('name');
+                        let qty = $(this).data('qty');
+                        $('#edit-modal').modal('show');
+                        $('.id').val(id)
+                        $('.name').val(name)
+                        $('.qty').val(qty)
+                    })
+                </script>
