--- a/src/views/admin/item/detail_item/show_activity.ejs
+++ b/src/views/admin/item/detail_item/show_activity.ejs
@@ -1,4 +1,4 @@
-<div class="tab-pane fade show active" id="show-activity">
+<div class="tab-pane fade show " id="show-activity" role="tabpanel" aria-labelledby="show-activity-tab">
     <div class="card shadow mb-4">
         <div class="card-body">
             <div class="row">
