--- a/src/views/admin/item/detail_item/show_feature.ejs
+++ b/src/views/admin/item/detail_item/show_feature.ejs
@@ -1,4 +1,4 @@
-<div class="tab-pane fade show active" id="show-feature" role="tabpanel" aria-labelledby="show-item-tab">
+<div class="tab-pane fade show active" id="show-feature" role="tabpanel" aria-labelledby="show-feature-tab">
     <div class="card shadow mb-4">
         <div class="card-body">
             <div class="row">
@@ -35,7 +35,35 @@
                                 </tr>
                             </thead>
                             <tbody>
-
+                                <% for(let i=0; i < feature.length; i++){ %>
+                                    <tr>
+                                        <td>
+                                            <%= i + 1 %>
+                                        </td>
+                                        <td>
+                                            <%= feature[i].name %>
+                                        </td>
+                                        <td>
+                                            <%= feature[i].qty %>
+                                        </td>
+                                        <td>
+                                            <img src="http://localhost:3000/<%= feature[i].imageUrl %>" alt="imageUrl"
+                                                width="70px">
+                                        </td>
+                                        <td>
+                                            <form
+                                                action="/admin/item/<%= itemId %>/feature/<%= feature[i].id %>?_method=DELETE"
+                                                method="POST">
+                                                <a href="javascript:void();" type="button"
+                                                    class="btn btn-warning btn-circle btn-sm button-update"
+                                                    data-id="<%= feature[i].id %>" data-name="<%= feature[i].name %>"
+                                                    data-qty="<%= feature[i].qty %>"><i class=" fas fa-edit"></i></a>
+                                                <button type="submit" class="btn btn-danger btn-circle btn-sm"><i
+                                                        class="fas fa-trash"></i></button>
+                                            </form>
+                                        </td>
+                                    </tr>
+                                    <% } %>
                             </tbody>
                         </table>
                     </div>
