--- a/src/views/admin/item/detail_item/show_activity.ejs
+++ b/src/views/admin/item/detail_item/show_activity.ejs
@@ -3,7 +3,7 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-md-5">
-                    <form action="/admin/bank" method="POST" enctype="multipart/form-data">
+                    <form action="/admin/item/add/activity" method="POST" enctype="multipart/form-data">
                         <div class="form-group">
                             <label for="name">Name</label>
                             <input autocomplete="off" type="text" class="form-control" id="name"
@@ -18,6 +18,7 @@
                             <label for="image">Image</label>
                             <input autocomplete="off" type="file" class="form-control" id="image" name="image">
                         </div>
+                        <input type="hidden" value="<%= itemId%>" name="itemId">
                         <button type="submit" class="btn btn-primary">Save</button>
                     </form>
                 </div>
@@ -29,12 +30,43 @@
                                     <th>No</th>
                                     <th>Name</th>
                                     <th>Type</th>
-                                    <th>Image Url</th>
+                                    <th>Image</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
                             <tbody>
+                                <% for(let i=0; i < activity.length; i++){ %>
+                                    <tr>
+                                        <td>
+                                            <%= i + 1 %>
+                                        </td>
+                                        <td>
+                                            <%= activity[i].name %>
+                                        </td>
+                                        <td>
+                                            <%= activity[i].type %>
+                                        </td>
+                                        <td>
+                                            <img src="http://localhost:3000/<%= activity[i].imageUrl %>" alt="imageUrl"
+                                                width="70px">
+                                        </td>
+                                        <td>
+                                            <form
+                                                action="/admin/item/<%= itemId %>/activity/<%= activity[i].id %>?_method=DELETE"
+                                                method="POST">
 
+                                                <a href="javascript:void();" type="button"
+                                                    class="btn btn-warning btn-circle btn-sm button-update"
+                                                    data-id="<%= activity[i].id %>" data-name="<%= activity[i].name %>"
+                                                    data-type="<%= activity[i].type %>"><i class=" fas fa-edit"></i></a>
+
+                                                <button type="submit" class="btn btn-danger btn-circle btn-sm">
+                                                    <i class="fas fa-trash"></i>
+                                                </button>
+                                            </form>
+                                        </td>
+                                    </tr>
+                                    <% } %>
                             </tbody>
                         </table>
                     </div>
