--- a/src/views/admin/booking/show_detail_booking.ejs
+++ b/src/views/admin/booking/show_detail_booking.ejs
@@ -27,10 +27,9 @@
                                 <%- include('../../partials/message.ejs') %>
 
                                     <!-- Page Heading -->
-                                    <h1 class="h3 mb-4 text-gray-800">Welcome to Booking</h1>
+                                    <h1 class="h3 mb-4 text-gray-800">Detail Booking</h1>
                                     <!-- DataTales Example -->
-                                    <%- include('./table_booking.ejs')%>
-
+                                    <%- include('./show_table_detail_booking.ejs')%>
                             </div>
                             <!-- /.container-fluid -->
 
