--- a/src/views/admin/bank/table_bank.ejs
+++ b/src/views/admin/bank/table_bank.ejs
@@ -33,7 +33,8 @@
                                 <%= bank[i].name%>
                             </td>
                             <td>
-                                <img src='http://localhost:3000/<%= bank[i].imageUrl%>' alt="imageUrl" width="70px">
+                                <img src='https://be-travelbwa.vercel.app/<%= bank[i].imageUrl%>' alt="imageUrl"
+                                    width="70px">
                             </td>
                             <td>
                                 <form action="/admin/bank/<%= bank[i].id %>?_method=DELETE" method="POST">
