--- a/src/views/admin/item/detail_item/show_activity.ejs
+++ b/src/views/admin/item/detail_item/show_activity.ejs
@@ -47,8 +47,8 @@
                                             <%= activity[i].type %>
                                         </td>
                                         <td>
-                                            <img src="http://localhost:3000/<%= activity[i].imageUrl %>" alt="imageUrl"
-                                                width="70px">
+                                            <img src="https://be-travelbwa.vercel.app/<%= activity[i].imageUrl %>"
+                                                alt="imageUrl" width="70px">
                                         </td>
                                         <td>
                                             <form
