--- a/src/views/admin/item/detail_item/show_feature.ejs
+++ b/src/views/admin/item/detail_item/show_feature.ejs
@@ -47,8 +47,8 @@
                                             <%= feature[i].qty %>
                                         </td>
                                         <td>
-                                            <img src="http://localhost:3000/<%= feature[i].imageUrl %>" alt="imageUrl"
-                                                width="70px">
+                                            <img src="https://be-travelbwa.vercel.app/<%= feature[i].imageUrl %>"
+                                                alt="imageUrl" width="70px">
                                         </td>
                                         <td>
                                             <form
